# ArgusV

./: .env.example  .gitignore  MVP_PLAN.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  kafka_setup_plan.md  pyproject.toml
argusv/: .dockerignore  .env.example  .gitignore  ARGUSV_PRD.json  ArgusV.code-workspace  Dockerfile  README.md  RECORDING_DEBUG_SESSION.md  RECORDING_REPLAY_GUIDE.md  TESTING_GUIDE.md  alembic.ini  backfill_descriptions.py  debug_out.txt  debug_paths.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  ffmpeg_log.txt  pyproject.toml  test_video_pipeline.py
argusv/RTSP-video-streamer/: config.json  installer.cmd  processor.py  server.py
argusv/RTSP-video-streamer/artifact/: mediamtx.yml
argusv/alembic/: env.py
argusv/alembic/versions/: 0001_baseline.py  0001_initial_schema.py  0002_vlm_columns.py  0003_segment_description.py  0004_segment_rag.py  0005_detection_config.py  1c5dc0706bdb_add_updated_at_to_zones.py  2c7f9f19b6a1_add_camera_id_to_zones.py  427b9e81c67b_init.py  551c551cf63d_init.py  7a29e046a79a_initial_migration.py  820eaa05584c_merge_heads.py  (+8 more)
argusv/assets/: bytetrack.yaml
argusv/docs/: ARGUSV_PRD.json  IMPLEMENTATION_STATUS.md  ITERATION_1_SUMMARY.md  ITERATION_2_SUMMARY.md  ITERATION_3_SUMMARY.md  RAG_AND_PROMPTS_GUIDE.md  README.md  api_documentation.md  configuration_setup.md  mvp_scope_and_pitch.md  system_flow_diagram.md
argusv/nginx/: default.conf
argusv/notes/: auth_decision.md
argusv/src/: bus.py  config.py  const.py  event_types.py  main.py
argusv/static/: auth.js  dashboard.html  debug.html  hls_test.html  incidents.html  login.html  recordings.html  zones.html
argusv/tests/: conftest.py  test_api.py  test_api_mocks.py  test_auth.py  test_bus.py  test_camera_streaming.py  test_camera_zone_payload.py  test_dlive.py  test_embeddings.py  test_fixtures.py  test_metrics.py  test_prompt_manager.py  test_recording.py  test_recordings_linkage.py  test_stats_api.py  test_watchdog_trigger.py  test_yolo_tracking.py  test_zone_matcher_priority.py  test_zones.py
services/decision-engine/: Dockerfile  MIGRATION_GUIDE.md  README.md  pyproject.toml
(+111 files in other folders)
