[project]
name = "argusv"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi",
    "uvicorn[standard]",
    # Computer vision + detection
    "ultralytics",              # YOLOv8 + ByteTrack
    "opencv-python-headless",
    "shapely",                  # Zone polygon matching
    # Database
    "sqlalchemy",
    "pgvector",                 # Vector similarity search (pgvector SQLAlchemy type)
    "psycopg2-binary",          # PostgreSQL driver (sync)
    "asyncpg",                  # PostgreSQL driver (async pipeline workers)
    "alembic",                  # DB migrations
    # Cache / pub-sub
    "redis",
    # VLM + notifications
    "httpx",                    # async HTTP for OpenAI + Slack
    # Utilities
    "python-dotenv",
    "pydantic",
    "pgvector>=0.4.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
